--- a/core/macros/abilities.cfg
+++ b/core/macros/abilities.cfg
@@ -1391,3 +1391,84 @@ This ability ignores any resistances or weaknesses of enemies, so it's very powe
         description= _ "This unit gains 1 movement after attacking, allowing it to slowly progress through ranks of enemies if it can survive their attacks."
     [/dummy]
 #enddef
+#define WEAPON_SPECIAL_INFECT
+    [poison]
+        id=infect
+        name= _ "infect"
+        description= _ "The target of this weapon specials becomes poisoned in a special way, so that if it dies from the poison, it becomes a Walking Corpse."
+    [/poison]
+#enddef
+#define WEAPON_SPECIAL_GREATER_INFECT
+    [poison]
+        id=greater infect
+        name= _ "greater infect"
+        description= _ "The target of this weapon specials becomes poisoned in a special way, so that if it dies from the poison, it becomes a Soulless."
+    [/poison]
+#enddef
+
+#define WEAPON_SPECIAL_MIND_RAID
+    [dummy]
+        id=mind raid
+        name= _ "mind raid"
+        description= _ "This weapon special steals 1 experience from the opponent, increasing the user's experience. It does not work if the target has no experience."
+    [/dummy]
+#enddef
+
+#define ABILITY_PENETRATE_LEADERSHIP
+    [dummy]
+        id=push
+        name= _ "push"
+        description= _ "When an ally standing next to this unit finishes attacking, it gains one movement point."
+    [/dummy]
+#enddef
+
+#define ABILITY_FROM_THE_ASHES
+    [dummy]
+        id=from the ashes
+        name= _ "from the ashes"
+        description= _ "If this unit is attacked and its hitpoints drop bellow 20, it heals 40 hitpoints and deals 40 fire damage to all nearby foes. This ability can be used only once per 10 turns."
+    [/dummy]
+#enddef
+
+#define WEAPON_SPECIAL_SHOCKWAVE
+    [slow]
+        id=shockwave
+        name= _ "shockwave"
+        description= _ "This attack is so strong that it slows the target, and creates a shock wave that knocks all enemies adjacent to the target 1 hex away from it, and causes them to take 8 impact damage. When used defensively, it only slows the attacker."
+    [/slow]
+#enddef
+
+#define WEAPON_SPECIAL_KAMIKAZE_SPRINT
+    [damage]
+        id=kamikaze sprint
+        name= _ "kamikaze sprint"
+        description= _ "If this attack hits offensively, the attacker takes the damage of all the opponent's attacks. Then, the enemy behind the target takes a half of this attack's damage, the enemy behind him takes a quarter of the initial damage etc, until there are no more enemies in the row, and the attacker will appear there."
+    [/damage]
+#enddef
+
+#define WEAPON_SPECIAL_DISINTEGRATE
+    [damage]
+        id=disintegrate
+        name= _ "disintegrate"
+        description= _ "Every blow with this weapon has a 2% chance to kill an enemy without any checks."
+    [/damage]
+#enddef
+
+#define WEAPON_SPECIAL_SOUL_EXTRACTION
+    [damage]
+        id=soul extraction
+        name= _ "soul extraction"
+        description= _ "Every blow with this attack has a 1% chance to kill an enemy, summoning a Ghost in the process."
+    [/damage]
+#enddef
+
+#define ABILITY_NORTHFROST_AURA
+    [dummy]
+        id=northfrost aura
+        name= _ "northfrost aura"
+        female_name= _ "female^northfrost aura"
+        description= _ "All enemies in the range of two hexes from this unit will be slowed at the beginning of their turn."
+    [/dummy]
+#enddef
+
+
