--- a/core/macros/abilities_events.cfg
+++ b/core/macros/abilities_events.cfg
@@ -443,4 +443,570 @@
         [/unstore_unit]
     [/event]
 
+    [event]
+        name=attacker_hits
+        first_time_only=no
+      
+        [filter_attack]
+            special=mind raid
+        [/filter_attack]
+      [if]
+        [variable]
+          name=second_unit.experience
+          greater_than_equal_to=1
+        [/variable]
+        [then]
+          {VARIABLE_OP second_unit.experience sub 1}
+          {VARIABLE_OP unit.experience add 1}
+          [unstore_unit]
+            variable=unit
+            find_vacant=no
+          [/unstore_unit]
+          [if]
+            [variable]
+              name=unit.experience
+              greater_than=$unit.max_experience
+            [/variable]
+            [then]
+              [fire_event]
+                name=force respec
+                [primary_unit]
+                  id=$unit.id
+                [/primary_unit]
+              [/fire_event]
+            [/then]
+          [/if]
+          [unstore_unit]
+            variable=second_unit
+            find_vacant=no
+          [/unstore_unit]
+        [/then]
+      [/if]
+    [/event]
+    [event]
+        name=defender_hits
+        first_time_only=no
+      
+        [filter_attack]
+            special=mind raid
+        [/filter_attack]
+      [if]
+        [variable]
+          name=unit.experience
+          greater_than_equal_to=1
+        [/variable]
+        [then]
+          {VARIABLE_OP unit.experience sub 1}
+          {VARIABLE_OP second_unit.experience add 1}
+          [unstore_unit]
+            variable=unit
+            find_vacant=no
+          [/unstore_unit]
+          [unstore_unit]
+            variable=second_unit
+            find_vacant=no
+          [/unstore_unit]
+        [/then]
+      [/if]
+    [/event]
+
+    [event]
+        name=attack end
+        first_time_only=no
+
+        [filter]
+          [filter_adjacent]
+        ability=push
+        is_enemy=no
+          [/filter_adjacent]
+        [/filter]
+        {VARIABLE_OP unit.moves add 1}
+        [unstore_unit]
+            variable=unit
+            find_vacant=no
+        [/unstore_unit]
+    [/event]
+
+    [event]
+	name=attacker hits
+	first_time_only=no
+	[filter_second]
+		ability=from the ashes
+		[not]
+			[filter_wml]
+				[variables]
+					from_the_ashes_used=yes
+				[/variables]
+			[/filter_wml]
+		[/not]
+	[/filter_second]
+	[fire_event]
+		name=from the ashes
+		[primary_unit]
+			if=$second_unit.id
+		[/primary_unit]
+	[/fire_event]
+    [/event]
+    [event]
+	name=defender hits
+	first_time_only=no
+	[filter]
+		ability=from the ashes
+		[not]
+			[filter_wml]
+				[variables]
+					from_the_ashes_used=yes
+				[/variables]
+			[/filter_wml]
+		[/not]
+	[/filter]
+	[fire_event]
+		name=from the ashes
+		[primary_unit]
+			if=$unit.id
+		[/primary_unit]
+	[/fire_event]
+    [/event]
+    [event]
+	name=from the ashes
+	first_time_only=no
+	[if]
+		[variable]
+			name=unit.hitpoints
+			less_than=20
+		[/variable]
+		[then]
+		    {VARIABLE unit.variables.from_the_ashes_used yes}
+		    {VARIABLE unit.variables.from_the_ashes_cooldown 10}
+		    [unstore_unit]
+			variable=unit
+			find_vacant=no
+		    [/unstore_unit]
+                    [heal_unit]
+                        [filter]
+                            id=$unit.id
+                        [/filter]
+                        amount=40
+                        animate=yes
+                        restore_statuses=yes
+                    [/heal_unit]
+		    [harm_unit]
+			    [filter]
+				[filter_adjacent]
+				        x,y=$x1,$y1
+				[/filter_adjacent]
+				[filter_side]
+				    [enemy_of]
+				        side=$unit.side
+				    [/enemy_of]
+				[/filter_side]
+			    [/filter]
+			    [filter_second]
+				x,y=$x1,$y1
+			    [/filter_second]
+			    amount=40
+			    damage_type=fire
+			    fire_event=yes
+			    experience=no
+			    kill=no
+		    [/harm_unit]
+		[/then]
+	[/if]
+    [/event]
+    [event]
+	name=turn refresh
+	first_time_only=no
+	[store_unit]
+		[filter]
+			side=$side_number
+			ability=from the ashes
+			[filter_wml]
+				[variables]
+					from_the_ashes_used=yes
+				[/variables]
+			[/filter_wml]
+ 		[/filter]
+		variable=ash_cooldown
+	[/store_unit]
+	{FOREACH ash_cooldown h}
+	    [if]
+		[variable]
+			name=ash_cooldown[$h].variables.from_the_ashes_cooldown
+			greater_than=1
+		[/variable]
+		[then]
+			{VARIABLE_OP ash_cooldown[$h].variables.from_the_ashes_cooldown sub 1}
+		[/then]
+		[else]
+		    {CLEAR_VARIABLE ash_cooldown[$h].variables.from_the_ashes_cooldown}
+		    {CLEAR_VARIABLE ash_cooldown[$h].variables.from_the_ashes_used}
+		[/else]
+	    [/if]
+	    [unstore_unit]
+		variable=ash_cooldown[$h]
+		find_vacant=no
+	    [/unstore_unit]
+	{NEXT h}
+    [/event]
+
+    [event]
+        name=attacker_hits
+        first_time_only=no
+
+        [filter_attack]
+            special=shockwave
+        [/filter_attack]
+
+        [store_unit]
+            [filter]
+                x,y=$x1,$y1
+            [/filter]
+            variable=harmer
+            kill=no
+        [/store_unit]
+        [store_unit]
+            [filter]
+                x,y=$x2,$y2
+            [/filter]
+            variable=primary_target
+            kill=no
+        [/store_unit]		#Stores the information about units to know their positions. Other targets are stored a bit lower, we need to damage them first.
+        [harm_unit_loti]
+            [filter]
+                [filter_adjacent]
+                    x,y=$x2,$y2
+                [/filter_adjacent]
+                [filter_side]
+                    [enemy_of]
+                        side=$side_number
+                    [/enemy_of]
+                [/filter_side]
+                [not]
+                    x,y=$x1,$y1
+                [/not]
+            [/filter]
+            [filter_second]
+                x,y=$x1,$y1
+            [/filter_second]
+            amount=8
+            damage_type=impact
+            fire_event=yes
+            animate=no
+        [/harm_unit_loti]
+        [store_unit]
+            [filter]
+                [filter_adjacent]
+                    x,y=$x2,$y2
+                [/filter_adjacent]
+                [filter_side]
+                    [enemy_of]
+                        side=$side_number
+                    [/enemy_of]
+                [/filter_side]
+                [not]
+                    x,y=$x2,$y2
+                [/not]
+            [/filter]
+            variable=other_targets
+            kill=yes		#We don't want to duplicate them.
+        [/store_unit]
+        {FOREACH other_targets i}
+            {VARIABLE move_x $other_targets[$i].x}
+            {VARIABLE move_y $other_targets[$i].y}
+            {VARIABLE_OP move_x sub $primary_target.x}
+            {VARIABLE_OP move_y sub $primary_target.y}
+            {VARIABLE_OP other_targets[$i].x add $move_x}
+            {VARIABLE_OP other_targets[$i].y add $move_y}		#Get the directions from the primary targets to others, and move them into them.
+            [unstore_unit]
+                variable=other_targets[$i]
+                find_vacant=yes
+                check_passability=yes			#We don't want them to be knocked into walls, do we?
+            [/unstore_unit]
+        {NEXT i}
+        {CLEAR_VARIABLE harmer}
+        {CLEAR_VARIABLE primary_target}
+        {CLEAR_VARIABLE other_targets}
+        {CLEAR_VARIABLE move_x}
+        {CLEAR_VARIABLE move_y}
+    [/event]
+
+    [event]
+        name=attacker_hits
+        first_time_only=no
+        [filter_attack]
+            special=kamikaze sprint
+        [/filter_attack]
+        {INCORPORATE_EFFECTS}
+	{VARIABLE opponent_damage $second_weapon.damage}
+	{VARIABLE_OP opponent_damage multiply $second_weapon.number}
+	[if]
+		[variable]
+			name=unit.hitpoints
+			greater_than=$opponent_damage
+		[/variable]
+		[then]
+			[if]
+				[variable]
+					name=opponent_damage
+					greater_than_equal_to=1
+				[/variable]
+				[then]
+					[harm_unit]
+					    [filter]
+						x,y=$x1,$y1
+					    [/filter]
+					    amount=$opponent_damage
+					    damage_type=$second_weapon.type
+					    fire_event=no
+					    experience=no
+					[/harm_unit]
+				[/then]
+			[/if]
+			[store_unit]
+				[filter]
+					find_in=unit
+				[/filter]
+				variable=attacker
+				kill=yes
+			[/store_unit]
+			[store_locations]
+			    [filter_adjacent_location]
+				x,y=$second_unit.x,$second_unit.y
+				adjacent=-$attacker.facing
+			    [/filter_adjacent_location]
+
+			    variable=pierce_target_hex
+			[/store_locations]
+			[while]
+				[have_unit]
+					x,y=$pierce_target_hex.x,$pierce_target_hex.y
+				[/have_unit]
+				[do]
+					{VARIABLE_OP damage divide 2}
+					[harm_unit_loti]
+					    [filter]
+						x,y=$pierce_target_hex.x,$pierce_target_hex.y
+						[filter_side]
+							[enemy_of]
+								side=$unit.side
+							[/enemy_of]
+						[/filter_side]
+					    [/filter]
+					    amount=$damage
+					    damage_type=$weapon.type
+					    fire_event=yes
+					    kill=yes
+					[/harm_unit_loti]
+					[store_locations]
+					    [filter_adjacent_location]
+						x,y=$pierce_target_hex.x,$pierce_target_hex.y
+						adjacent=-$attacker.facing
+					    [/filter_adjacent_location]
+
+					    variable=pierce_target_hex
+					[/store_locations]
+				[/do]
+			[/while]
+			{VARIABLE attacker.x $pierce_target_hex.x}
+			{VARIABLE attacker.y $pierce_target_hex.y}
+			[unstore_unit]
+				variable=attacker
+				find_vacant=yes
+				check_passability=yes
+			[/unstore_unit]
+			[if]
+				[variable]
+					name=second_unit.hitpoints
+					less_than=1
+				[/variable]
+				[then]
+					[kill]
+						id=$second_unit.id
+						[filter_second]
+							id=$unit.id
+						[/filter_second]
+					[/kill]
+				[/then]
+			[/if]
+		[/then]
+	[/if]
+        {CLEAR_VARIABLE damage}
+    [/event]
+
+    [event]
+        name=attacker hits
+        first_time_only=no
+        [filter_attack]
+            special=disintegrate
+        [/filter_attack]
+        {VARIABLE_OP did_kill rand (1..50)}
+        [if]
+            [variable]
+                name=did_kill
+                equals=1
+            [/variable]
+            [not]
+                [variable]
+                    name=bosses
+                    contains=$second_unit.id
+                [/variable]
+            [/not]
+            [then]
+                [harm_unit_loti]
+                    [filter]
+                        x,y=$x2,$y2
+                    [/filter]
+                    [filter_second]
+                        x,y=$x1,$y1
+                    [/filter_second]
+                    amount=10000
+                    fire_event=yes
+                    animate=no
+                [/harm_unit_loti]
+            [/then]
+        [/if]
+        {CLEAR_VARIABLE did_kill}
+    [/event]
+    [event]
+        name=defender hits
+        first_time_only=no
+        [filter_second_attack]
+            special=disintegrate
+        [/filter_second_attack]
+        {VARIABLE_OP did_kill rand (1..50)}
+        [if]
+            [variable]
+                name=did_kill
+                equals=1
+            [/variable]
+            [not]
+                [variable]
+                    name=bosses
+                    contains=$unit.id
+                [/variable]
+            [/not]
+            [then]
+                [harm_unit_loti]
+                    [filter]
+                        x,y=$x1,$y1
+                    [/filter]
+                    [filter_second]
+                        x,y=$x2,$y2
+                    [/filter_second]
+                    amount=10000
+                    fire_event=yes
+                [/harm_unit_loti]
+            [/then]
+        [/if]
+        {CLEAR_VARIABLE did_kill}
+    [/event]
+
+    [event]
+        name=attacker hits
+        first_time_only=no
+        [filter_attack]
+            special=soul extraction
+        [/filter_attack]
+        {VARIABLE_OP did_kill rand (1..100)}
+        [if]
+            [variable]
+                name=did_kill
+                equals=1
+            [/variable]
+            [not]
+                [variable]
+                    name=bosses
+                    contains=$second_unit.id
+                [/variable]
+            [/not]
+            [then]
+                [harm_unit_loti]
+                    [filter]
+                        x,y=$x2,$y2
+                    [/filter]
+                    [filter_second]
+                        x,y=$x1,$y1
+                    [/filter_second]
+                    amount=10000
+                    fire_event=yes
+                    animate=no
+                [/harm_unit_loti]
+		[unit]
+			type=Ghost
+			name=$second_unit.name
+			side=$unit.side
+			x,y=$second_unit.x,$second_unit.y
+		[/unit]
+            [/then]
+        [/if]
+        {CLEAR_VARIABLE did_kill}
+    [/event]
+    [event]
+        name=defender hits
+        first_time_only=no
+        [filter_second_attack]
+            special=soul extraction
+        [/filter_second_attack]
+        {VARIABLE_OP did_kill rand (1..100)}
+        [if]
+            [variable]
+                name=did_kill
+                equals=1
+            [/variable]
+            [not]
+                [variable]
+                    name=bosses
+                    contains=$unit.id
+                [/variable]
+            [/not]
+            [then]
+                [harm_unit_loti]
+                    [filter]
+                        x,y=$x1,$y1
+                    [/filter]
+                    [filter_second]
+                        x,y=$x2,$y2
+                    [/filter_second]
+                    amount=10000
+                    fire_event=yes
+                [/harm_unit_loti]
+		[unit]
+			type=Ghost
+			name=$unit.name
+			side=$second_unit.side
+			x,y=$unit.x,$unit.y
+		[/unit]
+            [/then]
+        [/if]
+        {CLEAR_VARIABLE did_kill}
+    [/event]
+
+    [event]
+        name=side turn
+        first_time_only=no
+        [harm_unit]
+            [filter]
+                [filter_location]
+                    [filter]
+                        ability=northfrost aura
+                        [filter_side]
+                            [enemy_of]
+                                side=$side_number
+                            [/enemy_of]
+                        [/filter_side]
+                    [/filter]
+                    radius=2
+                [/filter_location]
+                side=$side_number
+            [/filter]
+            amount=4
+            damage_type=cold
+            slowed=yes
+            fire_event=yes
+            experience=no
+            kill=no
+            animate=no
+        [/harm_unit]
+    [/event]
+
 #enddef
