--- a/core/units/undead/Eris.cfg
+++ b/core/units/undead/Eris.cfg
@@ -3,6 +3,8 @@
     id=Eris
     name= _ "female^Eris"
     {TRAIT_FEARLESS_MUSTHAVE}
+    {TRAIT_LOYAL}
+    {TRAIT_UNDEAD}
     gender=female
     race=human
     image="units/undead-necromancers/necromancer+female.png"
