--- a/core/units/undead/Nemesis.cfg
+++ b/core/units/undead/Nemesis.cfg
@@ -3,6 +3,8 @@
     id=Nemesis
     name= _ "female^Nemesis"
     {TRAIT_FEARLESS_MUSTHAVE}
+    {TRAIT_LOYAL}
+    {TRAIT_UNDEAD}
     gender=female
     race=human
     image="units/undead-necromancers/necromancer+female.png"
@@ -45,7 +47,7 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         # {ABILITY_TELEPORT}
         # {ABILITY_DISTRACT}
         # {ABILITY_INITIATIVE}
-        {ABILITY_DELUMINATES}
+        # {ABILITY_DELUMINATES}
         {ABILITY_DISRUPTS}
         {ABILITY_MIDDLE_PROTECTION}
         # {ABILITY_STEALTH}
