--- a/core/units/undead/Nyx.cfg
+++ b/core/units/undead/Nyx.cfg
@@ -3,6 +3,8 @@
     id=Nyx
     name= _ "female^Nyx"
     {TRAIT_FEARLESS_MUSTHAVE}
+    {TRAIT_LOYAL}
+    {TRAIT_UNDEAD}
     gender=female
     race=human
     image="units/undead-necromancers/necromancer+female.png"
@@ -20,7 +22,7 @@
     usage=mixed fighter
     description= _ "One of the pinnacles of what is considered ‘black magic’ is the art of necromancy, the terrible ability to awaken the dead with false life. This discovery alone caused humanity’s condemnation of black magic, for the nightmarish things it has made real have given fear a vast new arsenal.
 
-This ability, in all aspects, is the first step towards cheating death of its ultimate prize."+{SPECIAL_NOTES}+{SPECIAL_NOTES_FEEDING}+{SPECIAL_NOTES_REGENERATES}+{SPECIAL_NOTES_FIRSTSTRIKE}+{SPECIAL_NOTES_BACKSTAB}+{SPECIAL_NOTES_DRAIN}+{SPECIAL_NOTES_SKIRMISHER}+{SPECIAL_NOTES_BERSERK}+{SPECIAL_NOTES_STEADFAST}+{SPECIAL_NOTES_CURES}+{SPECIAL_NOTES_LEADERSHIP}+{SPECIAL_NOTES_PLAGUE}+{SPECIAL_NOTES_SLOW}+{SPECIAL_NOTES_TELEPORT}+{SPECIAL_NOTES_ARCANE}+{SPECIAL_NOTES_DISTRACT}+{SPECIAL_NOTES_SHOCK}+{SPECIAL_NOTES_STUN}+{SPECIAL_NOTES_POISON}
+This ability, in all aspects, is the first step towards cheating death of its ultimate prize."+{SPECIAL_NOTES}+{SPECIAL_NOTES_FEEDING}+{SPECIAL_NOTES_REGENERATES}+{SPECIAL_NOTES_FIRSTSTRIKE}+{SPECIAL_NOTES_DRAIN}+{SPECIAL_NOTES_SKIRMISHER}+{SPECIAL_NOTES_BERSERK}+{SPECIAL_NOTES_STEADFAST}+{SPECIAL_NOTES_CURES}+{SPECIAL_NOTES_LEADERSHIP}+{SPECIAL_NOTES_TELEPORT}+{SPECIAL_NOTES_ARCANE}+{SPECIAL_NOTES_DISTRACT}+{SPECIAL_NOTES_SHOCK}+{SPECIAL_NOTES_STUN}
     die_sound={SOUND_LIST:HUMAN_FEMALE_DIE}
     {DEFENSE_ANIM "units/undead-necromancers/necromancer+female-defend.png" "units/undead-necromancers/necromancer+female.png" {SOUND_LIST:HUMAN_FEMALE_HIT} }
     [portrait]
@@ -53,6 +55,9 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         {ABILITY_STEALS}
         {ABILITY_PENETRATE}
         {ABILITY_BURNING_AURA 8}
+        {ABILITY_PENETRATE_LEADERSHIP}
+        {ABILITY_FROM_THE_ASHES}
+        {ABILITY_NORTHFROST_AURA}
     [/abilities]
     [attack]
         name=plague staff
@@ -63,15 +68,15 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         damage=4
         number=8
         [specials]
-            {WEAPON_SPECIAL_PLAGUE}
+            {WEAPON_SPECIAL_GREATER_INFECT}
             {WEAPON_SPECIAL_FIRSTSTRIKE}
             {WEAPON_SPECIAL_DRAIN}
             {WEAPON_SPECIAL_UBER_BACKSTAB}
             {WEAPON_SPECIAL_EXPLOSIVE_SLOW}
             {WEAPON_SPECIAL_SHOCK}
             {WEAPON_SPECIAL_STUN}
+            {WEAPON_SPECIAL_SHOCKWAVE}
             {WEAPON_SPECIAL_NOCOUNTERATTACK}
-            {WEAPON_SPECIAL_POISON}
             {WEAPON_SPECIAL_HIT_AND_RUN}
         [/specials]
     [/attack]
@@ -87,6 +92,7 @@ This ability, in all aspects, is the first step towards cheating death of its ul
             {WEAPON_SPECIAL_EXPLOSIVE_SLOW}
             {WEAPON_SPECIAL_SHOCK}
             {WEAPON_SPECIAL_STUN}
+            {WEAPON_SPECIAL_SHOCKWAVE}
             {WEAPON_SPECIAL_NOCOUNTERATTACK}
             {WEAPON_SPECIAL_HIT_AND_RUN}
         [/specials]
@@ -107,6 +113,7 @@ This ability, in all aspects, is the first step towards cheating death of its ul
             {WEAPON_SPECIAL_EXPLOSIVE_SLOW}
             {WEAPON_SPECIAL_SHOCK}
             {WEAPON_SPECIAL_STUN}
+            {WEAPON_SPECIAL_SHOCKWAVE}
             {WEAPON_SPECIAL_NOCOUNTERATTACK}
             {WEAPON_SPECIAL_HIT_AND_RUN}
         [/specials]
@@ -115,6 +122,26 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         number=2
         icon=attacks/dark-missile.png
     [/attack]
+    [attack]
+        name=dragonstaff
+        description=_"dragonstaff"
+        type=pierce
+        range=ranged
+        damage=140
+        number=1
+        icon=attacks/dragonstaff.png
+        [specials]
+            {WEAPON_SPECIAL_CIRCLE}
+            {WEAPON_SPECIAL_FIRSTSTRIKE}
+            {WEAPON_SPECIAL_UBER_BACKSTAB}
+            {WEAPON_SPECIAL_EXPLOSIVE_SLOW}
+            {WEAPON_SPECIAL_STUN}
+            {WEAPON_SPECIAL_SHOCKWAVE}
+            {WEAPON_SPECIAL_NOCOUNTERATTACK}
+            {WEAPON_SPECIAL_HIT_AND_RUN}
+            {WEAPON_SPECIAL_SOUL_EXTRACTION}
+        [/specials]
+    [/attack] 
     [recruiting_anim]
         [filter_second]
             race=undead
@@ -160,6 +187,32 @@ This ability, in all aspects, is the first step towards cheating death of its ul
     [attack_anim]
         [filter_attack]
             name=shadow wave
+        [/filter_attack]
+
+        {MISSILE_FRAME_SHADOW_WAVE}
+
+        start_time=-675
+        [frame]
+            image="units/undead-necromancers/necromancer+female-magic-[1,2].png:75"
+        [/frame]
+        [frame]
+            image="units/undead-necromancers/necromancer+female-magic-3.png"
+            halo=halo/undead/black-magic-[1~5].png:[75*4,50]
+        [/frame]
+        [frame]
+            image="units/undead-necromancers/necromancer+female-magic-3.png:250"
+        [/frame]
+        {SOUND:HIT_AND_MISS magic-dark-big.ogg magic-dark-big-miss.ogg -50}
+        [frame]
+            image="units/undead-necromancers/necromancer+female-magic-[2,1].png:50"
+        [/frame]
+        [frame]
+            image="units/undead-necromancers/necromancer+female.png:50"
+        [/frame]
+    [/attack_anim]
+    [attack_anim]
+        [filter_attack]
+            name=dragonstaff
         [/filter_attack]
 
         {MISSILE_FRAME_SHADOW_WAVE}
