undead units update.

--- a/core/units/undead/Nyx.cfg
+++ b/core/units/undead/Nyx.cfg
@@ -58,6 +58,7 @@ This ability, in all aspects, is the first step towards cheating death of its ul
         {ABILITY_PENETRATE_LEADERSHIP}
         {ABILITY_FROM_THE_ASHES}
         {ABILITY_NORTHFROST_AURA}
+        {ABILITY_HEALS_OTHER 16}
     [/abilities]
     [attack]
         name=plague staff
